[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Jean-Aime-2023 <mugabejeanaime96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = "^0.115.5"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
